# solradm

./: .gitignore  CLAUDE.md  README.md  compose.yml  package-lock.json  package.json  pyproject.toml  x.txt
.github/: copilot-instructions.md
.github/workflows/: publish.yml
docs/: commands.md  config.toml  context-system.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/content/: _index.md  autocomplete.md  commands.md  getting-started.md  updates.md
docs/plans/: 2026-01-26-reindex-implementation.md  2026-01-26-reindex-rewrite-design.md
src/solradm/: __init__.py  async_typer.py  completion.py  lazy.py  lazy_group.py  main.py  update.py  utils.py
src/solradm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_state.py  test_collections_create.py  test_collections_node_selection.py  test_completion.py  test_completion_configs.py  test_config_view.py  test_context_current.py  test_context_repositories.py  test_context_switch.py  test_data_io.py  test_export_state.py  test_initial_setup.py  test_kube_console.py  test_kube_disk.py  test_kube_suspend_resume.py  test_main_default_context.py  test_query_command.py  test_reindex_busy_prompt.py  test_reindex_context_cluster_state.py  test_reindex_engine.py  test_reindex_rows_optional.py  test_reindex_shard_mapping.py  test_reindex_types.py  test_reindex_ui.py  test_reload_coordinators.py  test_rt_bundle_cleanup.py  test_status_command.py  test_version.py  test_zk_client.py  test_zk_diff.py  test_zk_sync_handler.py  test_zk_upload_filters.py  test_zoo_render.py
(+84 files in other folders)
