[project]
name = "solradm"
version = "1.27.1"
description = "Solr Administration CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "debugpy>=1.8.0",
    "jinja2>=3.1.6",
    "dynaconf>=3.2.11",
    "kazoo>=2.10.0",
    "kubernetes>=33.1.0",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "typer>=0.26.8",
    "textual>=1.0.0",
    "watchdog>=6.0.0",
    "pyasn1-modules>=0.4.2",
]

[project.scripts]
solradm = "solradm.main:run"
sa = "solradm.main:run"
sad = "solradm.main:run_debug"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"solradm.commands.rt" = ["resources/*.gradle.kts"]
